Updates example 01 to use new composite-bs-client package

--- a/examples/01-minimal/package.json
+++ b/examples/01-minimal/package.json
@@ -10,7 +10,7 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@zwerm/botsocket-clients": "../../../botsocket-clients"
+    "@zwerm/composite-bs-client": "^0.1.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
