--- a/examples/02-extended/package.json
+++ b/examples/02-extended/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "botsocket-client-example-02-css-framework",
+  "name": "composite-bs-client-example-02-css-framework",
   "version": "0.1.0",
-  "description": "Bot Socket Client CSS Framework implementation",
+  "description": "BotSocket Client CSS Framework implementation",
   "license": "ISC",
   "author": "",
   "main": "dist/index.html",
@@ -10,7 +10,7 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@zwerm/botsocket-clients": "../../../botsocket-clients",
+    "@zwerm/composite-bs-client": "^0.1.0",
     "bulma": "^0.7.1",
     "classlist": "^2.0.0",
     "dotenv-webpack": "^1.5.6"
